# worst-movies-api

./: README.md  pyproject.toml  run.py
app/: __init__.py  errors.py  init_data.py  models.py  utils.py  views.py
tests/: conftest.py  test_api.py
