[tool.poetry]
name = "worst-movies-api"
version = "0.1.0"
description = "API Responsible for evaluating films nominated as worst film at the Golden Raspberry Awards"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "worst_movies_api"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.3"
Flask-SQLAlchemy = "^3.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
